--- a/KanbanProject-main/FinalProject/src/main/resources/application.properties
+++ b/KanbanProject-main/FinalProject/src/main/resources/application.properties
@@ -10,3 +10,4 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=authService
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
+server.error.include-message=always
